kutt/kutt-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: kutt-sts
  name: kutt-sts
  namespace: kutt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kutt-sts
  serviceName: kutt-headless-service
  template:
    metadata:
      labels:
        app: kutt-sts
    spec:
      containers:
        -
          image: "redis:6.0-alpine"
          name: redis
          ports:
            -
              containerPort: 6379
              name: kutt-port
        -
          image: "postgres:12-alpine"
          name: postgres
          ports:
            -
              containerPort: 5432
              name: kutt-port
          volumeMounts:
            -
              mountPath: /var/lib/postgresql/data
              name: postgres-data
            -
              mountPath: /data
              name: redis-data
            -
              mountPath: secret
              name: kutt-secret
            -
              mountPath: config
              name: kutt-config
      volumes:
      - name: kutt-config
        configMap:
          name: kutt-config
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: kutt-pvc
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: kutt-pvc        
  volumeClaimTemplates:
    -
      apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: kutt-pvc
        app: kutt-sts
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: "3"
        storageClassName: local-storage
        local:
          path: '/k8s-pv'
