kutt/kutt-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kutt-headless-service
  namespace: kutt
spec:
  ClusterIp: None
  selector:
    app: kutt
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
