kutt/kutt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kutt-ingress
  namespace: kutt
spec:
  ingressClassName: kutt-ingressclass
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: kutt-service
            port:
              number: 3000
